# compile_llvm_to_gcn

./: .gitignore  CMakeLists.txt  README.md
src/: load.cpp  logger.h  main.cpp  test.cpp
test/: add.cpp  add.ll  load  load.cpp  taichi.ll  test_pass  vec.hsaco  vecadd-device.ll  vecadd-device.ll.s  vecadd.cpp  vecadd.ll  vecadd.ll.hsaco
